Show beta status / git branch.

--- a/ui-templates/index.html
+++ b/ui-templates/index.html
@@ -17,7 +17,7 @@
             Open BAPS Presenter
           </a>
           <hr>
-          <p>Version: {{data.server_version}} - Build: {{data.server_build}}</p>
+          <p>Version: {{data.server_version}} - Build: {{data.server_build}} - Branch: {{data.server_branch}}</p>
           <p>Server Name: {{data.server_name}}</p>
         </div>
       </div>
