Replace splash image, add resource files.

--- a/ui-templates/index.html
+++ b/ui-templates/index.html
@@ -19,6 +19,10 @@
           <hr>
           <p>Version: {{data.server_version}} - Build: {{data.server_build}} - Branch: {{data.server_branch}}</p>
           <p>Server Name: {{data.server_name}}</p>
+          <hr>
+          <small>
+            <a href="https://www.vecteezy.com/free-vector/island">Island Vectors by Vecteezy</a>, <a href="https://www.flaticon.com/free-icon/recording_3172492">Recording Vector from Flaticon</a>
+          </small>
         </div>
       </div>
     </div>
