--- a/ui-templates/status.html
+++ b/ui-templates/status.html
@@ -10,6 +10,10 @@
       <div class="col-4">
         {% if player %}
           <h3 class="h5">Player {{player.channel}}</h3>
+          <p>
+            Initialised: {{player.initialised}}<br/>
+            Fader Live: {{player.live}}
+          </p>
           <a href="/player/{{player.channel}}/play">Play</a>
           {% if player.paused %}
           <a href="/player/{{player.channel}}/unpause">UnPause</a>
