--- a/ui-templates/status.html
+++ b/ui-templates/status.html
@@ -19,9 +19,9 @@
           <a href="/player/{{player.channel}}/stop">Stop</a>
           <a href="/player/{{player.channel}}/seek/50.0">Seek 50</a>
           <br>
-          <label for="file">{{ player.pos_true | int }} / {{ player.length | int }}s ({{ player.remaining | int }}s)</label>
+          <label for="file">{{ player.pos | int }} / {{ player.length | int }}s ({{ player.remaining | int }}s)</label>
           <br>
-          <progress id="file" value="{% if player.length > 0 %}{{player.pos_true / player.length * 100}}{% else %}0{% endif %}" max="100" style="width: 100%"></progress>
+          <progress id="file" value="{% if player.length > 0 %}{{player.pos / player.length * 100}}{% else %}0{% endif %}" max="100" style="width: 100%"></progress>
 
           <hr />
           <h4 class="h6">Loaded Item</h3>
