--- a/ui-templates/404.html
+++ b/ui-templates/404.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content_inner %}
 <div class="text-center">
-  <div class="error-big mx-auto" data-text="404">404</div>
+  <div class="error error-big mx-auto" data-text="404">404</div>
   <p class="lead text-gray-800 mb-5">Page Not Found</p>
   <p class="text-gray-900 mb-0">Looks like you fell off the tip of the iceberg.</p>
   <a href="/">← Escape Back Home</a>
