--- a/ui-templates/base.html
+++ b/ui-templates/base.html
@@ -24,30 +24,27 @@
 
 <body class="bg-gradient-primary">
 
-    <div class="container">
+    <div class="container mt-5">
 
-      <!-- Outer Row -->
-      <div class="row justify-content-center">
-
-        <div class="col-xl-10 col-lg-12 col-md-9">
-          <div class="mt-5">
-            <a href="/">
-              <h1 class="h1 text-light d-inline">BAPSicle</h1>
-            </a>
-            {% if data.ui_menu is undefined or data.ui_menu is true %}
-            <div class="d-inline float-right">
-              <a href="/status" class="btn btn-user btn-outline-light btn-primary ml-4 {% if data.ui_page == 'status' %}active{% endif %}">
-                Status
+            <div class="d-flex justify-content-between">
+              <a href="/">
+                <h1 class="h1 text-light">BAPSicle</h1>
               </a>
-              <a href="/config/player" class="btn btn-user btn-outline-light btn-primary ml-4 {% if data.ui_page == 'config' %}active{% endif %}">
-                Player Config
-              </a>
-              <a href="/config/server" class="btn btn-user btn-outline-light btn-primary ml-4 {% if data.ui_page == 'server' %}active{% endif %}">
-                Server Config
-              </a>
-              <a href="/logs" class="btn btn-user btn-outline-light btn-primary ml-4 {% if data.ui_page == 'logs' %}active{% endif %}">
-                Logs
-              </a>
+              {% if data.ui_menu is undefined or data.ui_menu is true %}
+              <div>
+                <a href="/status" class="btn btn-user btn-outline-light btn-primary ml-4 {% if data.ui_page == 'status' %}active{% endif %}">
+                  Status
+                </a>
+                <a href="/config/player" class="btn btn-user btn-outline-light btn-primary ml-4 {% if data.ui_page == 'config' %}active{% endif %}">
+                  Player Config
+                </a>
+                <a href="/config/server" class="btn btn-user btn-outline-light btn-primary ml-4 {% if data.ui_page == 'server' %}active{% endif %}">
+                  Server Config
+                </a>
+                <a href="/logs" class="btn btn-user btn-outline-light btn-primary ml-4 {% if data.ui_page == 'logs' %}active{% endif %}">
+                  Logs
+                </a>
+              </div>
             </div>
             {% endif %}
             <div class="card o-hidden border-0 shadow-lg my-3">
@@ -56,7 +53,7 @@
                 <div class="card-body p-0">
                   <!-- Nested Row within Card Body -->
                   <div class="row">
-                    <div class="col-lg-12">
+                    <div class="col">
                       <div class="px-4 pt-5 pb-3">
                         <div class="text-center">
                           <h2 class="h3 text-gray-900">{{ data.ui_title }}</h2>
@@ -77,11 +74,8 @@
 
               {% endblock %}
             </div>
-          </div>
 
-        </div>
 
-      </div>
 
     </div>
 </body>
