--- a/ui-templates/status.html
+++ b/ui-templates/status.html
@@ -43,7 +43,7 @@
           {% endfor %}
           <br>
           {% else %}
-            <p>RIP. Failed to get this.</p>
+            <p>Failed to get status from Player Channel. Channel may be busy or has failed.</p>
           {% endif %}
       </div>
       {% endfor %}
