--- a/ui-templates/alerts.html
+++ b/ui-templates/alerts.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block head %}
-<meta http-equiv="refresh" content="2;url=/alerts" />
+<meta http-equiv="refresh" content="15;url=/alerts" />
 {% endblock %}
 {% block content_inner %}
   {% if data %}
@@ -25,8 +25,10 @@
 
       <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
         <div class="card-body">
-          <strong>Module: </strong>{{ alert.module }}<br>
-          {{ alert.description }}
+          <strong>Module: </strong><a href="/logs/{{ alert.module }}" title="Click for logs">{{ alert.module }}</a>
+          {% autoescape false %}
+          <p>{{ alert.description | replace("\n\n", "</p><p>") | replace("\n", "<br/>")}}</p>
+          {% endautoescape %}
         </div>
       </div>
     </div>
