Switch to quit.

--- a/ui-templates/index.html
+++ b/ui-templates/index.html
@@ -33,7 +33,7 @@
             <hr>
             <a href="/logs" class="btn btn-success">Logs</a>
             <a href="/restart" class="btn btn-info">Restart</a>
-            <a href="/shutdown" class="btn btn-danger">Shutdown</a>
+            <a href="/quit" class="btn btn-danger">Quit</a>
           </div>
 
           <hr>
