--- a/ui-templates/parts/alert_list.html
+++ b/ui-templates/parts/alert_list.html
@@ -2,21 +2,17 @@
   {% for alert in alerts %}
   <div class="card alert-{{ alert.ui_class }}">
     <div class="card-header" id="headingOne">
-      <h2 class="mb-0">
-        <button class="btn btn-link btn-block text-left" type="button" data-toggle="collapse" data-target="#collapseOne" aria-expanded="true" aria-controls="collapseOne">
-          {{ alert.title }}
-        </button>
-        <span class="badge badge-{{ alert.ui_class}}">{{ alert.severity }}</span>
-      </h2>
-      <span class="badge">Since {{ alert.start_time }}</span>
-      <span class="badge">Last Seen {{ alert.last_time }}</span>
+      <span class="badge badge-{{ alert.ui_class}}">{{ alert.severity }}</span>
+      <h4 class="h5 mb-0 mt-1">{{ alert.title }}</h4>
+      <span class="badge badge-primary">Since {{ alert.start_time | happytime }}</span>
+      <span class="badge badge-secondary">Last Seen {{ alert.last_time | happytime }}</span>
       {% if alert.end_time %}
-      <span class="badge">Ended {{ alert.end_time }}</span>
+      <span class="badge badge-success">Ended {{ alert.end_time | happytime }}</span>
       {% endif %}
     </div>
 
     <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-      <div class="card-body">
+      <div class="card-body pb-0">
         <strong>Module: </strong><a href="/logs/{{ alert.module }}" title="Click for logs">{{ alert.module }}</a>
         {% autoescape false %}
         <p>{{ alert.description | replace("\n\n", "</p><p>") | replace("\n", "<br/>")}}</p>
