Show loaded status

--- a/ui-templates/status.html
+++ b/ui-templates/status.html
@@ -12,6 +12,7 @@
           <h3 class="h5">Player {{player.channel}}</h3>
           <p>
             Initialised: {{player.initialised}}<br/>
+            Successful Load: {{player.loaded}}<br/>
             Fader Live: {{player.live}}<br/>
             Current Tracklist: {{player.tracklist_id}}
           </p>
