--- a/ui-templates/config_server.html
+++ b/ui-templates/config_server.html
@@ -56,7 +56,7 @@
         {% endfor %}
       </select>
       <p><small>
-        Normalisation requests significant CPU requirements, if you're finding the CPU usuage is too high / causing audio glitches, disable this feature. <code>ffmpeg</code> or <code>avconf</code> required.
+        Normalisation requests significant CPU requirements, if you're finding the CPU usage is too high / causing audio glitches, disable this feature. <code>ffmpeg</code> or <code>avconf</code> required.
       </small></p>
       <hr>
       <input type="submit" class="btn btn-primary" value="Save & Restart Server">
